# Project-InPostors

./: .clang-format  .gitignore  CMakeLists.txt  ChangeLog.md  LICENSE  README.md
memory-leak-engine/: CMakeLists.txt  pch.h
memory-leak-engine/imgui_impl/: imgui_impl_opengl3.cpp
memory-leak-engine/include/: Camera.h  CoreEngine.h  Initializer.h  Lights.h  LoggingMacros.h  Macros.h  MainEngine.h  MouseHandler.h  ShaderWrapper.h  Skybox.h  Time.h  Transform.h  Window.h
memory-leak-engine/include/Audio/: Audio.h  AudioAPI.h  AudioInstance.h  MusicAudio.h
memory-leak-engine/include/Core/: Core.h  CoreEngine.h  Formatters.h  Math.h  MouseHandler.h  OldTransform.h  RGBA.h  Time.h  TimerManager.h  Transform.h  Window.h
memory-leak-engine/include/Events/: Event.h  GamepadEvent.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
memory-leak-engine/include/Gameplay/: Component.h  ComponentManager.h  Entity.h  EntityManager.h  SceneComponent.h
memory-leak-engine/include/Gizmos/: Arrow.h  Gizmo.h  SphereGizmo.h
memory-leak-engine/include/LowLevelRenderer/: Mesh.h  Model.h  ModelRenderer.h  RenderingAPI.h  ShaderWrapper.h  VAOWrapper.h  Window.h
memory-leak-engine/include/Mesh/: Mesh.h  Model.h  ModelRenderer.h  VAOWrapper.h
memory-leak-engine/include/Nodes/: CameraNode.h  FreeCameraNode.h  ModelNode.h  MotorcycleNode.h  Node.h
memory-leak-engine/include/Physics/: CircleCollider.h  Collider.h  CollisionDetection.h  CollisionManager.h  CollisionResponses.h  Physics.h  PhysicsState.h  RectangleCollider.h  Rigidbody.h  SpacialHashGrid.h  SquareCollider.h
memory-leak-engine/include/Rendering/: Camera.h  CommonUniformBuffer.h  DirectionalLight.h  FrameBuffer.h  GBuffer.h  LateRenderable.h  Lights.h  Mesh.h  Model.h  ParticleSystem.h  PostProcess.h  QuadRenderer.h  Renderable.h  Renderer.h  RenderingAPI.h  ShaderProgram.h  ShaderWrapper.h
memory-leak-engine/include/RenderingLayer/: Lights.h  ModelRenderer.h
memory-leak-engine/include/SceneGraph/: SceneGraph.h  SceneGraphClient.h  Transform.h
memory-leak-engine/include/UI/: Image.h  Label.h  ProgressBar.h  Renderable2D.h  Renderer2D.h  UIController.h  UIRenderable.h  UIRenderer.h
memory-leak-engine/include/Utils/: Colors.h
memory-leak-engine/src/: Camera.cpp  CoreEngine.cpp  Initializer.cpp  Lights.cpp  LoggingMacros.cpp  Macros.cpp  MainEngine.cpp  MouseHandler.cpp  ShaderWrapper.cpp  Skybox.cpp  Time.cpp  Transform.cpp  Window.cpp
memory-leak-engine/src/AssetManager/: AssetManager.cpp  MeshAsset.cpp  TextureAsset.cpp
memory-leak-engine/src/Audio/: Audio.cpp  AudioAPI.cpp  AudioInstance.cpp  MusicAudio.cpp
memory-leak-engine/src/Core/: Core.cpp  CoreEngine.cpp  Math.cpp  MouseHandler.cpp  OldTransform.cpp  OperatorOverloading.cpp  Time.cpp  TimerManager.cpp  Transform.cpp  Window.cpp
memory-leak-engine/src/Events/: Event.cpp  GamepadEvent.cpp  KeyEvent.cpp  MouseEvent.cpp  WindowEvent.cpp
memory-leak-engine/src/Gameplay/: Component.cpp  ComponentManager.cpp  Entity.cpp  EntityManager.cpp  SceneComponent.cpp  TaskManager.cpp
memory-leak-engine/src/Gizmos/: Arrow.cpp  Gizmo.cpp  SphereGizmo.cpp
memory-leak-engine/src/LowLevelRenderer/: Camera.cpp  Lights.cpp  Mesh.cpp  Model.cpp  ModelRenderer.cpp  RenderingAPI.cpp  ShaderWrapper.cpp  VAOWrapper.cpp  Window.cpp
memory-leak-engine/src/Mesh/: Mesh.cpp  Model.cpp  ModelRenderer.cpp  VAOWrapper.cpp
memory-leak-engine/src/Nodes/: CameraNode.cpp  FreeCameraNode.cpp  ModelNode.cpp  MotorcycleNode.cpp  Node.cpp
memory-leak-engine/src/Physics/: CircleCollider.cpp  CollisionDetection.cpp  CollisionManager.cpp  CollisionResponses.cpp  Physics.cpp  PhysicsState.cpp  RectangleCollider.cpp  Rigidbody.cpp  SpacialHashGrid.cpp  SquareCollider.cpp
memory-leak-engine/src/Rendering/: Camera.cpp  CommonUniformBuffer.cpp  DirectionalLight.cpp  FrameBuffer.cpp  GBuffer.cpp  Lights.cpp  Mesh.cpp  Model.cpp  ParticleSystem.cpp  PostProcess.cpp  QuadRenderer.cpp  Renderer.cpp  RenderingAPI.cpp  ShaderProgram.cpp  ShaderWrapper.cpp
memory-leak-engine/src/RenderingLayer/: Camera.cpp  Lights.cpp  Mesh.cpp  Model.cpp  ModelRenderer.cpp  ShaderWrapper.cpp  VAOWrapper.cpp
memory-leak-engine/src/SceneGraph/: SceneGraph.cpp  Transform.cpp
memory-leak-engine/src/UI/: Image.cpp  Label.cpp  ProgressBar.cpp  Renderable2D.cpp  Renderer2D.cpp  UIController.cpp  UIRenderable.cpp  UIRenderer.cpp
project-inpostors/: CMakeLists.txt  main.cpp  pch.h
project-inpostors/include/: BillboardTest.h  CarMovementComponent.h  LevelTaskManager.h  Player.h  ScoreManager.h  SimpleCarMovementComponent.h  SimplePlayer.h  TaskManager.h
project-inpostors/include/AI/: TrafficCar.h  TrafficMovementComponent.h
project-inpostors/include/Animation/: AnimatedEntity.h  AnimationComponent.h  AnimationLibrary.h  FactoryAnimationComponent.h  FerrisWheelAnim.h  MonsterTruckAnimationComponent.h  SpecialAnimationComponent.h  StorageAnimationComponent.h
project-inpostors/include/Buildings/: AutoDestroyComponent.h  Building.h  Factory.h  FactoryEquipmentComponent.h  FactorySplit.h  InteractiveBuilding.h  Storage.h
project-inpostors/include/Car/: CarInput.h  CarMovementComponent.h  Equipment.h  PlayerOneInput.h  PlayerTwoInput.h
project-inpostors/include/Entities/: GameplayEventEntity.h
project-inpostors/include/FX/: CashFX.h  DestroyFX.h  DriftFX.h  FXLibrary.h  FactorySmokeFX.h  SmokeFX.h  SparklesFX.h
project-inpostors/include/Levels/: LevelGenerator.h  NavigationGraph.h  Neighbours.h
project-inpostors/include/Managers/: AudioManager.h  ChatManager.h  GameplayEventsManager.h  LevelTaskManager.h  TaskManager.h
project-inpostors/include/Player/: EquipmentComponent.h  Player.h  PlayerAudioComponent.h  PlayerFXComponent.h
project-inpostors/include/Scenes/: LevelScene.h  MenuScene.h  TestScene.h  TutorialScene.h
project-inpostors/include/UI/: FactoryUI.h  FinishScreen.h  GameplayOverlay.h  MessageBox.h  PauseMenu.h  PlayerUI.h  (+4 more)
project-inpostors/src/: BillboardTest.cpp  LevelTaskManager.cpp  Player.cpp  ScoreManager.cpp  SimpleCarMovementComponent.cpp  SimplePlayer.cpp  TaskManager.cpp  main.cpp
(+471 files in other folders)
